webportal/css/dashboard.css
.main {
	display: flex;
	flex-direction: row;
	width: 100%;
	flex-grow: 1;
}

.message {
	position: absolute;
	z-index: 10;
	width: 100%;
	color: #001f3f;
	font-weight: bold;
	padding: 1rem;
	text-align: center;
	background-color: #cfcfcf;
	align-self: center;
}

.menu-button {
	display: none;
	font-size: 2.5rem;
	color: #afafaf;
	padding: 0.5rem;
	cursor: pointer;
	height: 3rem;
	position: absolute;
}

.menu {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	max-width: 9rem;
	flex-grow: 1;
	background-color: #0f1f6f;
	box-shadow: 0 0 5px #0f1f6f;
	padding: 1rem;
}

.menu-list {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.menu-list li {
	color: #afafaf;
	margin: 1rem 0;
	cursor: pointer;
}

.menu-list li:hover {
	font-weight: bold;
}

.menu-list li.active {
	margin-left: 1rem;
	font-weight: bold;
}

.pages {
	flex-grow: 1;
	padding: 1rem;
}

.page {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.page h1 {
	text-align: left;
	margin-top: 0;
}

section {
	display: flex;
	flex-direction: column;
	width: 100%;
	align-items: flex-start;
	border: 1px solid #afafaf;
	border-radius: 0.5rem;
	padding: 0.5rem;
	margin-bottom: 0.5rem;
}

section:last-child {
	margin-bottom: 0;
}

section h2 {
	margin: 0;
	font-size: 1.2rem;
}

label {
	font-size: 1rem;
	color: #afafaf;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

.input {
	font-size: 1rem;
	padding: 0.5rem;
	outline: none;
	width: 100%;
}

.error {
	color: #df3f1f;
}

button {
	width: 50%;
	max-width: 10rem;
	height: 2.5rem;
	margin-top: 0.5rem;
	font-size: 1rem;
	background-color: #7f7f7f;
	color: #cfcfcf;
	border: none;
	border-radius: 0.5rem;
	cursor: pointer;
}

button:hover {
	background-color: #5f5f5f;
}

.checkbox-container {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.checkbox {
	width: 1.2rem;
	height: 1.2rem;
	margin-right: 0.5rem;
}

.checkbox-label {
	margin: 0;
}

.password {
	position: relative;
	width: 100%;
	max-width: 20rem;
}

.toggle-checkbox {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	right: 0.25rem;
	top: 0.25rem;
	z-index: 1;
	opacity: 0;
	cursor: pointer;
}

.toggle-icon {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	right: 0.5rem;
	top: 0.5rem;
	z-index: 1;
}

.hint-button {
	margin-left: 0.5rem;
	font-size: 0.8rem;
	width: 1rem;
	height: 1rem;
	color: #001f8f;
	background-color: #afafaf;
	position: relative;
	border: 1px solid #afafaf;
	border-radius: 50%;
	cursor: pointer;
	display: inline-block;
	text-align: center;
}

.hint {
	position: absolute;
	left: 1.5rem;
	top: 0;
	color: #001f8f;
	background-color: #afafaf;
	font-size: 0.8rem;
	text-align: left;
	border: 1px solid #afafaf;
	border-radius: 0.25rem;
	padding: 0.25rem;
	min-width: 10rem;
	z-index: 1;
	display: none;
}

.hint-button:hover .hint {
	display: initial;
}

.balance {
	text-align: left;
}

@media screen and (max-width: 800px) {

	.menu-button {
		display: initial;
	}

	.mobile-hidden {
		display: none;
	}

	.menu {
		position: absolute;
		z-index: 1;
	}

	.page h1 {
		font-size: 1.5rem;
		margin-left: 2rem;
	}
}

